fix card module,add scroll UI(always visible),add copy icon

--- a/themes/vald/static/css/main.css
+++ b/themes/vald/static/css/main.css
@@ -424,8 +424,8 @@
 }
 
 pre {
-  padding: 24px;
-  white-space: pre-wrap;
+  padding: 32px 24px 24px 24px;
+  overflow-x: auto;
   position: relative;
   font-size: 85%;
   line-height: 1.45;
@@ -435,6 +435,65 @@ pre {
   letter-spacing: 0;
 }
 
+.highlight{
+  position: relative;
+}
+
+.highlight::before{
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: #f8f8f8;
+  background-image:url('../images/docs_icon_copy.png');
+  display: inline-block;
+  right: 0;
+  top:0;
+  z-index: 2;
+  background-size: 40px 20px;
+  -webkit-transition: opacity 0.3s;
+  -moz-transition: opacity 0.3s;
+  -ms-transition: opacity 0.3s;
+  -o-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+
+
+.highlight::after{
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: #f8f8f8;
+  background-image:url('../images/docs_icon_copy.png');
+  display: inline-block;
+  right: 0;
+  top:0;
+  z-index: 1;
+  background-size: 40px 20px;
+  background-position: 20px 0;
+}
+
+.highlight.clicked::before{
+  opacity: 0;
+}
+
+
+pre::-webkit-scrollbar{height:8px;}
+pre::-webkit-scrollbar-track{
+  background:#e9e9e9;
+}
+pre::-webkit-scrollbar-thumb{
+  background:#777777;
+}
+
+table::-webkit-scrollbar{height:8px;}
+table::-webkit-scrollbar-track{
+  background:#e9e9e9;
+}
+table::-webkit-scrollbar-thumb{
+  background:#777777;
+}
 
 code {
   display: inline-block;
@@ -1061,33 +1120,6 @@ details > summary  {
     .current {
       border: none;
     }
-  }
-
-  /* card dark*/
-  .notice{
-    background-color: #001E4D;
-    color:#F0F6FF;
-  }
-
-  .caution{
-    background-color: #4A3800;
-    color:#FFF6DC;
-  }
-  .warning{
-    background-color: #440900;
-    color: #FFECE9;
-  }
-
-  .notice .label::before{
-    background-position: -14px 0;
-  }
-
-  .caution .label::before{
-    background-position: -14px -14px;
-  }
-
-  .warning .label::before{
-    background-position: -14px -28px;
   }
 
 }
